# SyncPlusPlus

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  addPhotos.h  addphotos.cpp  config.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sync.cpp  sync.h
ui/: mainWindow.ui  mainwindow.ui
